--- a/.github/actions/create-release/action.yml
+++ b/.github/actions/create-release/action.yml
@@ -24,7 +24,7 @@ runs:
     - run: npm install semver
       shell: bash
 
-    - name: Get Version
+    - name: get version
       uses: actions/github-script@v6
       id: get-version
       with:
@@ -61,7 +61,7 @@ runs:
           core.info(`Version: ${version}`)
           core.setOutput("package_version", version)
 
-    - name: Get Release
+    - name: get release
       uses: actions/github-script@v6
       id: get-release
       with:
