--- a/.github/actions/docker-install-test/action.yml
+++ b/.github/actions/docker-install-test/action.yml
@@ -6,19 +6,19 @@ runs:
   steps:
     - uses: actions/checkout@v6
 
-    - name: Setup Go
+    - name: setup Go
       uses: magnetikonline/action-golang-cache@v5
       with:
         go-version-file: go.mod
 
-    - name: Build binary
+    - name: build binary
       shell: bash
       run: |
         mkdir -p ./e2e/bin
         CGO_ENABLED=0 go build -o ./e2e/bin/devpod-linux-amd64
         chmod +x ./e2e/bin/devpod-linux-amd64
 
-    - name: Remove Docker to test installation
+    - name: remove Docker to test installation
       shell: bash
       run: |
         sudo systemctl stop docker.socket docker.service
@@ -27,7 +27,7 @@ runs:
         sudo rm -f /usr/bin/docker /usr/bin/dockerd
         docker --version && exit 1 || echo "Docker removed"
 
-    - name: Run Docker installation test
+    - name: run Docker installation test
       shell: bash
       working-directory: ./e2e
       run: |
@@ -36,7 +36,7 @@ runs:
           GOROOT="${GOROOT}" \
           go test -v -ginkgo.v -timeout 600s --ginkgo.label-filter=docker-install
 
-    - name: Verify Docker is installed
+    - name: verify Docker is installed
       shell: bash
       run: |
         docker --version
