--- a/.github/actions/setup-build-environment/action.yml
+++ b/.github/actions/setup-build-environment/action.yml
@@ -24,20 +24,20 @@ runs:
         git config --global core.autocrlf false
         git config --global core.eol lf
 
-    - name: Apply Version
+    - name: apply version
       if: inputs.cli_only == 'false'
       shell: bash
       run: yarn version --new-version ${{ inputs.package_version }} --no-git-tag-version
       working-directory: "./desktop"
 
-    - name: Setup System Dependencies
+    - name: setup system dependencies
       if: inputs.host == 'ubuntu-latest' && inputs.cli_only == 'false'
       shell: bash
       run: |
         sudo apt-get update
         sudo apt-get install -y libgtk-3-dev libwebkit2gtk-4.1-dev libayatana-appindicator3-dev librsvg2-dev
 
-    - name: Setup Rust
+    - name: setup Rust
       uses: dtolnay/rust-toolchain@stable
       if: inputs.cli_only == 'false'
       with:
@@ -49,13 +49,13 @@ runs:
       with:
         workspaces: "./desktop/src-tauri -> target"
 
-    - name: Setup Go
+    - name: setup Go
       uses: magnetikonline/action-golang-cache@v5
       with:
         go-version-file: go.mod
         cache-key-suffix: "release"
 
-    - name: Setup Node
+    - name: setup Node
       uses: actions/setup-node@v6
       if: inputs.cli_only == 'false'
       with:
@@ -63,13 +63,13 @@ runs:
         cache: "yarn"
         cache-dependency-path: "./desktop/yarn.lock"
 
-    - name: Install frontend dependencies
+    - name: install frontend dependencies
       if: inputs.cli_only == 'false'
       shell: bash
       run: yarn install
       working-directory: "./desktop"
 
-    - name: Install additional ubuntu dependencies
+    - name: install additional ubuntu dependencies
       if: inputs.host == 'ubuntu-latest'
       shell: bash
       run: |
