--- a/package.json
+++ b/package.json
@@ -2,6 +2,6 @@
   "name": "devpod",
   "private": true,
   "devDependencies": {
-    "@biomejs/biome": "^2.3.8"
+    "@biomejs/biome": "2.3.8"
   }
 }
