fixup!: enable cross os archive for cache
Signed-off-by: Samuel K <69881238+skevetter@users.noreply.github.com>

--- a/.github/actions/compile-windows-binary/action.yml
+++ b/.github/actions/compile-windows-binary/action.yml
@@ -35,3 +35,4 @@ runs:
       with:
         path: ${{ inputs.binary-path }}
         key: ${{ inputs.binary-cache-key }}-${{ github.sha }}
+        enableCrossOsArchive: true
