--- a/.github/actions/create-linux-release-artifacts/action.yml
+++ b/.github/actions/create-linux-release-artifacts/action.yml
@@ -35,15 +35,17 @@ runs:
   steps:
     - uses: actions/checkout@v6
 
-    - uses: ./.github/actions/build-tauri-app
+    - name: build tauri app
+      uses: tauri-apps/tauri-action@v0.6
       with:
-        target: ${{ inputs.target }}
-        release_id: ${{ inputs.release_id }}
-        args: "--config src-tauri/tauri-flatpak.conf.json --bundles appimage,deb,updater"
-        include_updater_json: "true"
-        github_token: ${{ inputs.github_token }}
-        tauri_private_key: ${{ inputs.tauri_private_key }}
-        tauri_key_password: ${{ inputs.tauri_key_password }}
+        releaseId: ${{ inputs.release_id }}
+        projectPath: "./desktop"
+        args: "--target ${{ inputs.target }} --config src-tauri/tauri-flatpak.conf.json --bundles appimage,deb,updater"
+        includeUpdaterJson: true
+      env:
+        GITHUB_TOKEN: ${{ inputs.github_token }}
+        TAURI_SIGNING_PRIVATE_KEY: ${{ inputs.tauri_private_key }}
+        TAURI_SIGNING_PRIVATE_KEY_PASSWORD: ${{ inputs.tauri_key_password }}
         SIGN: ${{ inputs.app_image_sign }}
         SIGN_KEY: ${{ inputs.app_image_sign_key }}
         APPIMAGETOOL_SIGN_PASSPHRASE: ${{ inputs.app_image_sign_passphrase }}
