--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -157,12 +157,15 @@ jobs:
           distribution: Ubuntu-24.04
           use-cache: true
 
-      - name: start docker in WSL
+      - name: install and start docker in WSL
         shell: pwsh
         run: |
-          wsl --set-default-version 2
-          wsl --list --verbose
+          wsl --distribution Ubuntu-24.04 --exec sudo apt update && sudo apt upgrade -y
+          wsl --distribution Ubuntu-24.04 --exec sudo apt-get install docker.io -y
           wsl --distribution Ubuntu-24.04 --exec sudo service docker start
+
+          wsl.exe -l -v
+          wsl.exe --set-default Ubuntu-24.04
 
       - name: Log in to GitHub Container Registry
         uses: docker/login-action@v3
