--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -165,6 +165,11 @@ jobs:
 
           wsl.exe -l -v
           wsl.exe --set-default Ubuntu-24.04
+          
+          # Configure Docker to use WSL and Linux platform
+          echo "DOCKER_HOST=unix:///var/run/docker.sock" >> $env:GITHUB_ENV
+          echo "DOCKER_DEFAULT_PLATFORM=linux/amd64" >> $env:GITHUB_ENV
+          echo "WSL_INTEROP=/run/WSL/interop" >> $env:GITHUB_ENV
 
       - name: Log in to GitHub Container Registry
         uses: docker/login-action@v3
