--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -165,18 +165,13 @@ jobs:
 
           wsl.exe -l -v
           wsl.exe --set-default Ubuntu-24.04
-          
+
           # Configure Docker to use WSL and Linux platform
           echo "DOCKER_HOST=unix:///var/run/docker.sock" >> $env:GITHUB_ENV
           echo "DOCKER_DEFAULT_PLATFORM=linux/amd64" >> $env:GITHUB_ENV
           echo "WSL_INTEROP=/run/WSL/interop" >> $env:GITHUB_ENV
 
-      - name: Log in to GitHub Container Registry
-        uses: docker/login-action@v3
-        with:
-          registry: ghcr.io
-          username: ${{ github.actor }}
-          password: ${{ secrets.GITHUB_TOKEN }}
+          wsl --distribution Ubuntu-24.04 --exec docker pull mcr.microsoft.com/devcontainers/base:ubuntu
 
       - name: Run integration test
         uses: ./.github/actions/run-integration-test
